fixed vertical alignment

--- a/akvo/rsr/static/styles-src/main.css
+++ b/akvo/rsr/static/styles-src/main.css
@@ -2927,9 +2927,9 @@ article {
   .indicator-container .noIndicators {
     text-align: center;
     display: block;
-    margin-top: 50%;
+    padding-top: 50%;
     width: 100%;
-    height: 100%;
+    height: 50%;
     color: rgba(153, 153, 153, 0.5);
     text-shadow: 1px 1px 0 white;
     font-size: 150%; }
